--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/bun": "latest",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "drizzle-kit": "^0.31.4",
+    "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.5",
     "vite-tsconfig-paths": "^5.1.4"
   },
@@ -21,10 +23,14 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-router": "^1.129.8",
     "@tanstack/react-start": "^1.129.8",
+    "better-auth": "^1.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.0",
+    "drizzle-orm": "^0.44.3",
     "lucide-react": "^0.525.0",
     "postcss": "^8.5.6",
+    "postgres": "^3.4.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
