--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.11",
+    "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-router": "^1.129.8",
+    "@tanstack/react-router-with-query": "^1.129.8",
     "@tanstack/react-start": "^1.129.8",
     "better-auth": "^1.3.3",
     "class-variance-authority": "^0.7.1",
@@ -29,12 +34,16 @@
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
     "lucide-react": "^0.525.0",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "postgres": "^3.4.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.61.1",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "vite": "^7.0.5"
+    "vite": "^7.0.5",
+    "zod": "^4.0.9"
   }
 }
