--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tanstack/react-router": "^1.129.8",
     "@tanstack/react-router-with-query": "^1.129.8",
     "@tanstack/react-start": "^1.129.8",
+    "@tanstack/react-table": "^8.21.3",
     "better-auth": "^1.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
