--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query-devtools": "^5.83.0",
     "@tanstack/react-router": "^1.129.8",
+    "@tanstack/react-router-devtools": "^1.129.8",
     "@tanstack/react-router-with-query": "^1.129.8",
     "@tanstack/react-start": "^1.129.8",
     "@tanstack/react-table": "^8.21.3",
